--- a/BOSS/Qt/mainwindow.ui
+++ b/BOSS/Qt/mainwindow.ui
@@ -128,7 +128,7 @@
      <rect>
       <x>20</x>
       <y>120</y>
-      <width>171</width>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -139,7 +139,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Build-Order Sequence</string>
+     <string>Build-Order</string>
     </property>
    </widget>
    <widget class="QListWidget" name="initialStateList">
@@ -216,11 +216,14 @@
    <widget class="QSpinBox" name="mineralsSpinBox">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>170</y>
-      <width>91</width>
+      <width>121</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
     <property name="maximum">
      <number>99999</number>
@@ -229,7 +232,7 @@
    <widget class="QLabel" name="mineralsLabel">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>510</x>
       <y>150</y>
       <width>91</width>
       <height>16</height>
@@ -242,7 +245,7 @@
    <widget class="QLabel" name="gasLabel">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>520</x>
       <y>200</y>
       <width>91</width>
       <height>16</height>
@@ -255,11 +258,17 @@
    <widget class="QSpinBox" name="gasSpinBox">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>220</y>
-      <width>91</width>
+      <width>121</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="maximum">
+     <number>99999</number>
     </property>
    </widget>
    <widget class="QLabel" name="itemInformationLabel">
@@ -414,9 +423,9 @@
    <widget class="QLabel" name="imageLabel">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>470</x>
       <y>10</y>
-      <width>141</width>
+      <width>161</width>
       <height>121</height>
      </rect>
     </property>
@@ -535,6 +544,45 @@
     </property>
     <property name="text">
      <string>Army Value Graph</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="viewStateButton">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>120</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View Details</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buildOrderDetails">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>120</y>
+      <width>81</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View Details</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="viewFinalStateButton">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>280</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View Final State</string>
     </property>
    </widget>
   </widget>
